# interpolator_for_wrfchem

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
exploration/: README.md  cams_global_forecasts.toml  cams_global_forecasts_only_o3.toml  check_boundary.py  check_o3.py  compare_pressure.py
interpolator_for_wrfchem/: __init__.py  __main__.py  global_model.py  global_model_2.py  interpolation.py  met_em.py  species_map.py  utils.py  wrf.py
interpolator_for_wrfchem/global_models/: __init__.py  cams.py  cams_adsbeta.py  prototype.py  wrfout.py
interpolator_for_wrfchem/res/: cams_l137.csv
species_maps/: cams_eac4_gocart.toml  species_maps.md  wrfout.toml
