[tool.poetry]
name = "interpolator-for-wrfchem"
version = "1.3.1"
description = "Interpolates global chemistry fields for use with WRF-CHEM"
authors = ["Thanasis Georgiou <ageorgiou@noa.gr>"]
readme = "README.md"

[tool.poetry.scripts]
interpolator-for-wrfchem = "interpolator_for_wrfchem:main"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
netcdf4 = "^1.6.5"
scipy = "^1.11.4"
tomli = "^2.0.1"
xarray = "^2023.12.0"
cftime = "^1.6.3"
pandas = "^2.1.4"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
matplotlib = "^3.8.2"
cartopy = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
