[tool.poetry]
name = "interpolator-for-wrfchem"
version = "1.4.0"
description = "Interpolates global chemistry fields for use with WRF-CHEM"
authors = ["Thanasis Georgiou <ageorgiou@noa.gr>"]
readme = "README.md"

[tool.poetry.scripts]
interpolator-for-wrfchem = "interpolator_for_wrfchem:main"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.5"
netcdf4 = "^1.7.2"
scipy = "^1.15.3"
tomli = "^2.0.1"
xarray = "^2025.4.0"
cftime = "^1.6.3"
pandas = "^2.2.3"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
matplotlib = "^3.10.3"
cartopy = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
